apps/jsp-test1-03-06/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jsp-test1-03-06
  namespace: dev
  labels:
    app: jsp-test1-03-06
    backstage.io/kubernetes-id: jsp-test1-03-06
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jsp-test1-03-06
  template:
    metadata:
      labels:
        app: jsp-test1-03-06
        backstage.io/kubernetes-id: jsp-test1-03-06
        environment: dev
    spec:
      containers:
        - name: jsp-test1-03-06
          image: chaitanyapandeygspann/jsp-test1-03-06:1.0.1
          ports:
            - containerPort: 8080
