apps/jsp-test1-03-06/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsp-test1-03-06
  namespace: dev
  labels:
    backstage.io/kubernetes-id: jsp-test1-03-06
spec:
  selector:
    app: jsp-test1-03-06
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
